--- a/src/components/home/CarouselSection.astro
+++ b/src/components/home/CarouselSection.astro
@@ -28,7 +28,7 @@
                 >
                   <img
                     src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 1"
+                    alt="Courts intérieurs The Padel"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -37,8 +37,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 2"
+                    src="/thumbnails/slider/thumb-2.png"
+                    alt="Terrains de padel"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -47,8 +47,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 3"
+                    src="/thumbnails/slider/thumb-3.png"
+                    alt="Installation sportive"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -57,8 +57,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-2.png"
-                    alt="Padel 4"
+                    src="/thumbnails/slider/thumb-4.jpeg"
+                    alt="Centre padel Bordeaux"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -67,8 +67,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-3.png"
-                    alt="Padel 5"
+                    src="/thumbnails/slider/thumb-5.jpeg"
+                    alt="Équipements padel"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -144,8 +144,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 6"
+                    src="/thumbnails/slider/thumb-6.jpeg"
+                    alt="Espace détente padel"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -154,8 +154,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 7"
+                    src="/thumbnails/slider/thumb-7.jpeg"
+                    alt="Bar snacking"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -164,8 +164,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 8"
+                    src="/thumbnails/slider/thumb-2.png"
+                    alt="Club house"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -174,8 +174,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-2.png"
-                    alt="Padel 9"
+                    src="/thumbnails/slider/thumb-5.jpeg"
+                    alt="Espace convivial"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -185,7 +185,7 @@
                 >
                   <img
                     src="/thumbnails/slider/thumb-3.png"
-                    alt="Padel 10"
+                    alt="Terrasse padel"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -261,8 +261,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 11"
+                    src="/thumbnails/slider/thumb-4.jpeg"
+                    alt="Espace garderie"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -271,8 +271,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 12"
+                    src="/thumbnails/slider/thumb-5.jpeg"
+                    alt="Accueil enfants"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -281,8 +281,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Padel 13"
+                    src="/thumbnails/slider/thumb-6.jpeg"
+                    alt="Activités famille"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -291,8 +291,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-2.png"
-                    alt="Padel 14"
+                    src="/thumbnails/slider/thumb-7.jpeg"
+                    alt="Centre sportif"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -301,8 +301,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-3.png"
-                    alt="Padel 15"
+                    src="/thumbnails/slider/thumb-1.png"
+                    alt="Installations modernes"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
