--- a/src/pages/politique-de-confidentialite.astro
+++ b/src/pages/politique-de-confidentialite.astro
@@ -51,7 +51,7 @@ import "../styles/global.css";
           <p class="font-semibold text-blue-900">THE PADEL</p>
           <p class="text-blue-800">Siège social : 20 Avenue Jean Mermoz, 33185 LE HAILLAN</p>
           <p class="text-blue-800">Club : 212 Av du Maréchal Leclerc, 33130 Bègles</p>
-          <p class="text-blue-800">Téléphone : 06 67 45 40 70</p>
+          <p class="text-blue-800">Téléphone : 09 72 19 82 43</p>
         </div>
       </div>
     </section>
@@ -366,7 +366,7 @@ import "../styles/global.css";
           Pour toute question concernant cette politique de confidentialité ou pour exercer vos droits, vous pouvez nous contacter :
         </p>
         <div class="bg-blue-50 border-l-4 border-blue-400 rounded-md p-4 my-3">
-          <p class="text-blue-900"><strong>Par téléphone :</strong> 06 67 45 40 70</p>
+          <p class="text-blue-900"><strong>Par téléphone :</strong> <a href="tel:0972198243" class="text-blue-600 underline">09 72 19 82 43</a></p>
           <p class="text-blue-900"><strong>Par courrier :</strong> THE PADEL, 20 Avenue Jean Mermoz, 33185 LE HAILLAN</p>
           <p class="text-blue-900"><strong>Via notre formulaire de contact :</strong> <a href="/contact" class="text-blue-600 underline">www.thepadel.fr/contact</a></p>
         </div>
