Update footer and carousel links to direct to the new shop URL for improved navigation.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -121,7 +121,7 @@ import FooterCarousel from "./FooterCarousel.astro";
       <nav class="flex flex-col gap-3 text-lg font-impact uppercase text-white">
         <a href="/" class="hover:text-[#12EF97] transition">Accueil</a>
         <a href="/tournois" class="hover:text-[#12EF97] transition">Tournois</a>
-        <a href="/boutique" class="hover:text-[#12EF97] transition">Boutique</a>
+        <a href="https://shop.thepadel.fr" class="hover:text-[#12EF97] transition">Boutique</a>
         <a href="/contact" class="hover:text-[#12EF97] transition">Contact</a>
         <a href="/reglement" class="hover:text-[#12EF97] transition"
           >Règlement intérieur</a
