--- a/src/components/FooterCarousel.astro
+++ b/src/components/FooterCarousel.astro
@@ -65,7 +65,7 @@
         </a>
         <!-- Slide 3 -->
         <a
-          href="/boutique"
+          href="https://shop.thepadel.fr"
           aria-label="Aller à la page boutique"
           class="flex-shrink-0 w-full lg:w-[350px] mx-0 lg:mx-4 rounded-2xl overflow-hidden shadow-lg relative bg-black group block focus:outline-none focus:ring-2 focus:ring-[#12EF97]"
         >
