Add new thumbnail images for the slider and update image paths in CarouselSection.astro for enhanced visual content.

--- a/src/components/home/CarouselSection.astro
+++ b/src/components/home/CarouselSection.astro
@@ -144,8 +144,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-6.jpeg"
-                    alt="Espace détente padel"
+                    src="/thumbnails/slider/thumb-8.jpeg"
+                    alt="Espace snacking"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -154,8 +154,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-7.jpeg"
-                    alt="Bar snacking"
+                    src="/thumbnails/slider/thumb-9.jpeg"
+                    alt="Bar club house"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -164,8 +164,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-2.png"
-                    alt="Club house"
+                    src="/thumbnails/slider/thumb-10.jpeg"
+                    alt="Restauration padel"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -174,8 +174,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-5.jpeg"
-                    alt="Espace convivial"
+                    src="/thumbnails/slider/thumb-11.jpeg"
+                    alt="Espace convivial snacking"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -184,8 +184,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-3.png"
-                    alt="Terrasse padel"
+                    src="/thumbnails/slider/thumb-12.jpeg"
+                    alt="Terrasse bar"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -261,7 +261,7 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-4.jpeg"
+                    src="/thumbnails/slider/thumb-13.jpeg"
                     alt="Espace garderie"
                     class="w-full h-full object-cover object-center"
                   />
@@ -271,7 +271,7 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-5.jpeg"
+                    src="/thumbnails/slider/thumb-14.jpeg"
                     alt="Accueil enfants"
                     class="w-full h-full object-cover object-center"
                   />
@@ -281,8 +281,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-6.jpeg"
-                    alt="Activités famille"
+                    src="/thumbnails/slider/thumb-15.jpeg"
+                    alt="Activités enfants"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -291,8 +291,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-7.jpeg"
-                    alt="Centre sportif"
+                    src="/thumbnails/slider/thumb-16.jpeg"
+                    alt="Espace famille"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
@@ -301,8 +301,8 @@
                   style="opacity:0;"
                 >
                   <img
-                    src="/thumbnails/slider/thumb-1.png"
-                    alt="Installations modernes"
+                    src="/thumbnails/slider/thumb-2.png"
+                    alt="Garderie padel"
                     class="w-full h-full object-cover object-center"
                   />
                 </div>
